Added some stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="camera_mode">Camera Mode</string>
     <string name="pilot_mode">Pilot Mode</string>
     <string name="start_flight">Start Flight</string>
-
+    <string name="success">Success</string>
 </resources>
