--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
+    <!-- Main Activity -->
     <string name="app_name">DJIDronePilot</string>
-    <string name="camera_mode">Camera Mode</string>
-    <string name="pilot_mode">Pilot Mode</string>
     <string name="start_flight">Start Flight</string>
     <string name="success">Success</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+    <!-- Camera Activity -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
